# line-notify-sdk

./: Makefile  README.md  example.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint_python.yaml  publish-pypi.yaml  publish-test-pypi.yaml
notify/: __init__.py
