[metadata]
name = line-notify-sdk
version = attr: notify.__version__
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = line line-notify line-notify-sdk
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires = file: requirements.txt

[flake8]
extend-ignore=E501
exclude=venv/**
max-line-length=79
